# whisper-preview

./: .gitignore  TODO  flake.nix
rust/: Cargo.toml
rust/shared-protocol/: Cargo.toml
rust/shared-protocol/src/: lib.rs
rust/shared-vad/: Cargo.toml
rust/shared-vad/src/: lib.rs
rust/transcriber/: Cargo.toml
rust/transcriber/src/: main.rs  session.rs
