[workspace.package]
version = "0.1.0"

[workspace.metadata.crane]
name = "whisper-preview"

[workspace]
resolver = "3"
members = [
    "shared-protocol",
    "transcriber",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
